--- a/resume.html
+++ b/resume.html
@@ -26,6 +26,33 @@ title: Personal Resume
 </p>
 
 <h2>HISTORY</h2>
+		<h3>Business Owner and Freelance Consultant</h3>
+<p class="job-title">March 2017 - Present, Midwest Nerd Chick</p>
+<ul>
+	<li>Has studied and been involved with ADA accommodations and requirements for employees and employers.</li>
+	<li>Active member of the LGTQIA+ community and uses collected data to help educate employers on best practices.</li>
+  <li>Participates and improves development processes, such as Agile, Scrum, and Kanban, related to software deployments and testing for clients</li>
+<li>Helped a 3-person IT Team for a company of 160 employees incorporate Scrum into the IT Help Desk and Long Term projects to improve efficiency and tracking.</li>
+<li>Works with the UI Designer on artistic digital design and provides feedback on animations, CSS, and final HTML output</li>
+<li>Has a level of product and industry knowledge sufficient to convey Client’s product roadmaps in an ethical and straightforward manner</li>
+<li>Instrumental in arranging and editing Powerpoint slide presentations and workshop handouts</li>
+<li>Frequently gives presentations not limited to, but includes, "Why I love working on an Agile Team", "If you hate working on an Agile Team, 
+	you are doing it wrong", and "Helping Non-Techs Understand Business Technology"</li>
+	<li>Wedding Planning for non-traditional weddings, including contacting and organizing various vendors, venues, and styles of the couples</li>
+	<Builds simple WordPress Sites for small businesses and non-profits who may not otherwise be able to have a website.</li>
+
+
+</ul>
+<h3>Senior Web Developer</h3>
+<p class="job-title">February 2016-March 2017, Sedgwick County></p>
+<ul>
+<li>Update legacy code in existing ASP.NET applications using C#, HTML, CSS, JavaScript, and SQL</li>
+<li>Maintain Sedgwick County website and update any verbiage or documentation as needed</li>
+<li>Deployed applications on multiple servers and updated spooling as needed</li>
+<li>Wrote SQL scripts for querying and deleting records in active deployment</li>
+<li>Worked with clients on new web pages to customize while keeping with current county standards</li>
+<li>Rewrote multiple applications with custom user controls so they had consistency and better user interface</li>
+</ul>
 <h3>Agile Product Owner</h3>
 <p class="job-title">Jan 2019 - June 2019, Smash Dev Shop</p>
 
@@ -70,23 +97,7 @@ title: Personal Resume
 <li>Taught 3D software applications, including Inkscape and Tinkercad, and the use of 3D equipment</li>
     </ul>
 
-    <h3>Freelance Consultant</h3>
-<p class="job-title">March 2017 - Present, Midwest Nerd Chick</p>
-<ul>
-    <li>Took on multiple small projects to help with personal growth</li>
-    <li>Did wedding planning including all meetings with all vendors, fittings, and small tasks for bride and groom</li>
-    <li>Began networking in the community to get a feeling of what Wichita needs for technology</li>
-</ul>
-<h3>Senior Web Developer</h3>
-<p class="job-title">February 2016-March 2017, Sedgwick County></p>
-<ul>
-<li>Update legacy code in existing ASP.NET applications using C#, HTML, CSS, JavaScript, and SQL</li>
-<li>Maintain Sedgwick County website and update any verbiage or documentation as needed</li>
-<li>Deployed applications on multiple servers and updated spooling as needed</li>
-<li>Wrote SQL scripts for querying and deleting records in active deployment</li>
-<li>Worked with clients on new web pages to customize while keeping with current county standards</li>
-<li>Rewrote multiple applications with custom user controls so they had consistency and better user interface</li>
-</ul>
+    
 
 <h3>Billing Specialist</h3>
 <p class="job-title">September 2014-February 2016, Optometric Billing Solutions, Wichita, KS</p>
